syntax = "proto3";

package actoris.trustledger.v1;

import "actoris/common.proto";

option go_package = "github.com/actoris/actoris/gen/go/actoris/trustledger/v1;trustledgerv1";

// TrustLedger service for verification and immutable record keeping
service TrustLedgerService {
  // Submit an action for verification
  rpc SubmitAction(SubmitActionRequest) returns (SubmitActionResponse);

  // Get verification status (for async verification)
  rpc GetVerificationStatus(GetVerificationStatusRequest) returns (GetVerificationStatusResponse);

  // Get outcome record by ID
  rpc GetOutcomeRecord(GetOutcomeRecordRequest) returns (GetOutcomeRecordResponse);

  // Query outcome records
  rpc QueryOutcomeRecords(QueryOutcomeRecordsRequest) returns (QueryOutcomeRecordsResponse);

  // Get Merkle proof for an outcome record
  rpc GetMerkleProof(GetMerkleProofRequest) returns (GetMerkleProofResponse);

  // Verify Merkle proof
  rpc VerifyMerkleProof(VerifyMerkleProofRequest) returns (VerifyMerkleProofResponse);

  // Stream verification events (for real-time monitoring)
  rpc StreamVerifications(StreamVerificationsRequest) returns (stream VerificationEvent);

  // Get ledger statistics
  rpc GetLedgerStats(GetLedgerStatsRequest) returns (GetLedgerStatsResponse);
}

// Oracle service (internal - for oracle nodes)
service OracleService {
  // Join verification quorum
  rpc JoinQuorum(JoinQuorumRequest) returns (JoinQuorumResponse);

  // Submit partial signature
  rpc SubmitPartialSignature(SubmitPartialSignatureRequest) returns (SubmitPartialSignatureResponse);

  // Get signing commitments from other oracles
  rpc GetCommitments(GetCommitmentsRequest) returns (GetCommitmentsResponse);

  // Report oracle health
  rpc ReportHealth(ReportHealthRequest) returns (ReportHealthResponse);
}

// SubmitAction request
message SubmitActionRequest {
  // Actor's DID
  string actor_did = 1;
  // Client's DID
  string client_did = 2;
  // Action type identifier
  string action_type = 3;
  // Raw input (will be hashed)
  bytes input = 4;
  // Raw output (will be hashed)
  bytes output = 5;
  // Compute consumed (PFLOP-hours)
  string compute_hc = 6;
  // Actor's signature over (action_type || input_hash || output_hash || timestamp)
  bytes actor_signature = 7;
  // Submission timestamp
  int64 timestamp = 8;
  // Optional: Request synchronous verification (default: async)
  bool synchronous = 9;
  // Optional: Timeout in milliseconds (default: 2000ms)
  uint32 timeout_ms = 10;
}

message SubmitActionResponse {
  // Verification request ID
  string request_id = 1;
  // If synchronous: the outcome record
  optional actoris.common.v1.OutcomeRecord outcome_record = 2;
  // Verification status
  VerificationStatus status = 3;
}

enum VerificationStatus {
  VERIFICATION_STATUS_UNSPECIFIED = 0;
  VERIFICATION_STATUS_PENDING = 1;
  VERIFICATION_STATUS_IN_PROGRESS = 2;
  VERIFICATION_STATUS_COMPLETED = 3;
  VERIFICATION_STATUS_FAILED = 4;
  VERIFICATION_STATUS_TIMEOUT = 5;
}

// GetVerificationStatus request
message GetVerificationStatusRequest {
  string request_id = 1;
}

message GetVerificationStatusResponse {
  string request_id = 1;
  VerificationStatus status = 2;
  // Set if verification is complete
  optional actoris.common.v1.OutcomeRecord outcome_record = 3;
  // Error if verification failed
  optional actoris.common.v1.ErrorInfo error = 4;
  // Progress info
  optional VerificationProgress progress = 5;
}

message VerificationProgress {
  uint32 oracle_votes_received = 1;
  uint32 oracle_votes_required = 2;
  int64 started_at = 3;
  uint32 elapsed_ms = 4;
}

// GetOutcomeRecord request
message GetOutcomeRecordRequest {
  string id = 1;
}

message GetOutcomeRecordResponse {
  actoris.common.v1.OutcomeRecord outcome_record = 1;
}

// QueryOutcomeRecords request
message QueryOutcomeRecordsRequest {
  // Filter by actor DID
  optional string actor_did = 1;
  // Filter by client DID
  optional string client_did = 2;
  // Filter by action type
  optional string action_type = 3;
  // Filter by time range
  optional int64 from_timestamp = 4;
  optional int64 to_timestamp = 5;
  // Filter by verification result
  optional bool verified_only = 6;
  // Pagination
  actoris.common.v1.PageRequest page = 7;
}

message QueryOutcomeRecordsResponse {
  repeated actoris.common.v1.OutcomeRecord records = 1;
  actoris.common.v1.PageResponse page = 2;
}

// GetMerkleProof request
message GetMerkleProofRequest {
  string record_id = 1;
}

message GetMerkleProofResponse {
  // Proof siblings
  repeated bytes proof = 1;
  // Root hash
  bytes root = 2;
  // Leaf index
  uint64 leaf_index = 3;
}

// VerifyMerkleProof request
message VerifyMerkleProofRequest {
  // Record canonical hash (leaf)
  bytes leaf_hash = 1;
  // Proof siblings
  repeated bytes proof = 2;
  // Expected root
  bytes root = 3;
  // Leaf index
  uint64 leaf_index = 4;
}

message VerifyMerkleProofResponse {
  bool valid = 1;
}

// StreamVerifications request
message StreamVerificationsRequest {
  // Filter by action type
  optional string action_type = 1;
  // Filter by actor DID
  optional string actor_did = 2;
  // Start from this stream position
  optional uint64 from_position = 3;
}

message VerificationEvent {
  actoris.common.v1.OutcomeRecord record = 1;
  uint64 stream_position = 2;
}

// GetLedgerStats request
message GetLedgerStatsRequest {
  // Time range for stats
  optional int64 from_timestamp = 1;
  optional int64 to_timestamp = 2;
}

message GetLedgerStatsResponse {
  // Total records
  uint64 total_records = 1;
  // Verified records
  uint64 verified_records = 2;
  // Failed verifications
  uint64 failed_verifications = 3;
  // Average verification latency (ms)
  double avg_latency_ms = 4;
  // P95 verification latency (ms)
  double p95_latency_ms = 5;
  // Current Merkle tree height
  uint32 tree_height = 6;
  // Current stream position
  uint64 stream_position = 7;
}

// Oracle internal messages

message JoinQuorumRequest {
  string oracle_did = 1;
  bytes public_key = 2;
}

message JoinQuorumResponse {
  bool accepted = 1;
  uint32 quorum_position = 2;
}

message SubmitPartialSignatureRequest {
  string request_id = 1;
  string oracle_did = 2;
  // FROST partial signature
  bytes signature_share = 3;
  // FROST commitment
  bytes commitment = 4;
  // Oracle's vote
  bool approved = 5;
  // Reason if not approved
  optional string reason = 6;
}

message SubmitPartialSignatureResponse {
  bool accepted = 1;
  uint32 signatures_collected = 2;
  uint32 signatures_required = 3;
}

message GetCommitmentsRequest {
  string request_id = 1;
}

message GetCommitmentsResponse {
  message OracleCommitment {
    string oracle_did = 1;
    bytes commitment = 2;
  }
  repeated OracleCommitment commitments = 1;
}

message ReportHealthRequest {
  string oracle_did = 1;
  double cpu_usage = 2;
  double memory_usage = 3;
  uint64 verifications_processed = 4;
}

message ReportHealthResponse {
  bool acknowledged = 1;
}
